--- a/package.json
+++ b/package.json
@@ -100,7 +100,7 @@
     "i18n:upload": "dotenv -e .env.defaults -c -- yarn run i18n:_upload",
     "i18n:_download": "crowdin download --token=$CROWDIN_ACCESS_TOKEN",
     "i18n:download": "dotenv -e .env.defaults -c -- yarn run i18n:_download",
-    "lfg": "yarn && yarn contracts:compile && yarn mobile env:local:download && yarn web env:local:download && yarn g:build && yarn mobile pod && yarn mobile graphql:generate:swift && yarn mobile ios",
+    "lfg": "yarn && yarn contracts:compile && yarn g:build && yarn mobile pod && yarn mobile graphql:generate:swift && yarn mobile ios",
     "mobile": "yarn workspace @uniswap/mobile",
     "postinstall": "husky install",
     "staged:lint:fix": "eslint --fix",
